--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林), server: 213.183.53.208, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇳🇱 荷兰-218.0KB/s(Youtube:不良林), server: 213.183.59.190, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林), server: 213.183.53.207, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇮🇳 印度-1.46MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
-  - {name: 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林), server: 213.183.53.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林), server: 213.183.53.221, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林), server: 213.183.53.221, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林), server: 213.183.53.207, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
   - {name: 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林), server: 213.183.53.179, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林), server: 213.183.53.221, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林), server: 213.183.53.207, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林), server: 213.183.53.179, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林), server: 213.183.53.208, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林), server: 213.183.53.214, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林), server: 213.183.53.208, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
+  - {name: 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林), server: 213.183.53.214, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林), server: 213.183.53.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-531.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-821.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-218.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-427.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-823.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-253.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
