--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林), server: 213.183.53.179, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林), server: 213.183.53.221, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林), server: 213.183.53.207, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林), server: 213.183.53.179, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林), server: 213.183.53.208, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林), server: 213.183.53.214, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林), server: 213.183.53.208, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
-  - {name: 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林), server: 213.183.53.214, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林), server: 213.183.53.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林), server: 213.183.53.208, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林), server: 213.183.53.198, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林), server: 213.183.53.207, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林), server: 213.183.53.207, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林), server: 213.183.53.179, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇳🇱 荷兰-1.86MB/s(Youtube:不良林), server: 213.183.59.214, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇳🇱 荷兰-1.51MB/s(Youtube:不良林), server: 213.183.59.214, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇳🇱 荷兰-882.1KB/s(Youtube:不良林), server: 213.183.59.211, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇳🇱 荷兰-776.4KB/s(Youtube:不良林), server: 213.183.59.211, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇳🇱 荷兰-355.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-882.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-776.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-355.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-882.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-776.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-355.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-882.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-776.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-355.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-882.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-776.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-355.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-882.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-776.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-355.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-882.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-776.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-355.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-329.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-228.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.00MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-882.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-776.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-355.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
