--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林), server: 213.183.53.208, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
-  - {name: 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林), server: 213.183.53.198, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林), server: 213.183.53.207, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林), server: 213.183.53.207, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林), server: 213.183.53.179, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇳🇱 荷兰-1.86MB/s(Youtube:不良林), server: 213.183.59.214, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 🇳🇱 荷兰-1.51MB/s(Youtube:不良林), server: 213.183.59.214, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇳🇱 荷兰-882.1KB/s(Youtube:不良林), server: 213.183.59.211, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇳🇱 荷兰-776.4KB/s(Youtube:不良林), server: 213.183.59.211, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇳🇱 荷兰-355.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇳🇱 荷兰-1.19MB/s(Youtube:不良林), server: 213.183.59.211, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇳🇱 荷兰-448.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇷🇺 俄罗斯联邦-549.5KB/s(Youtube:不良林), server: 213.183.53.214, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇻🇳 越南-1.94MB/s(Youtube:不良林), server: hcm3.aqvpn.me, port: 443, type: trojan, password: d00083c7-e3db-4707-a24d-5662912368ff, sni: hcm3.aqvpn.me, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-232.3KB/s(Youtube:不良林), server: 213.183.59.190, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇳🇱 荷兰-372.5KB/s(Youtube:不良林), server: 213.183.59.211, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇳🇱 荷兰-351.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇳🇱 荷兰-326.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇳🇱 荷兰-392.8KB/s(Youtube:不良林), server: 213.183.59.206, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇳🇱 荷兰-321.3KB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-882.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-776.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-355.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-448.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-549.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-372.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-326.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-882.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-776.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-355.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-448.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-549.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-372.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-326.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-882.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-776.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-355.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-448.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-549.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-372.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-326.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-882.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-776.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-355.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-448.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-549.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-372.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-326.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-882.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-776.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-355.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-448.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-549.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-372.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-326.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-882.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-776.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-355.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-448.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-549.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-372.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-326.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-230.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-390.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-254.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.86MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-882.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-776.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-355.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.19MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-448.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-549.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-372.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-326.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
