--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-4.33MB/s(Youtube:不良林), server: 213.183.53.214, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇷🇺 俄罗斯联邦-233.3KB/s(Youtube:不良林), server: 213.183.53.207, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇳🇱 荷兰-232.3KB/s(Youtube:不良林), server: 213.183.59.190, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇨🇳 中国-4.30MB/s(Youtube:不良林), server: mplsjs1.ggbbba.xyz, port: 45780, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
-  - {name: 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林), server: 213.183.53.179, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇳🇱 荷兰-326.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林), server: 213.183.53.214, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林), server: 213.183.53.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林), server: 213.183.53.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林), server: 213.183.53.221, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-351.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
   - {name: 🇳🇱 荷兰-392.8KB/s(Youtube:不良林), server: 213.183.59.206, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
   - {name: 🇳🇱 荷兰-321.3KB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
   - {name: 🇺🇸 美国-4.68MB/s(Youtube:不良林), server: c11s3.jamjams.net, port: 17938, type: vmess, uuid: e8d5a966-8093-4d4e-8977-0baca9c8ab55, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-4.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-233.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-326.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-4.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-233.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-326.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-4.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-233.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-326.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-4.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-233.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-326.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-4.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-233.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-326.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-4.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-233.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-326.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-4.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-233.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-232.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-201.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-326.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-409.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-744.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-351.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-321.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
